compiler/testData/asJava/lightClasses/compilationErrors/PropertyWithoutName.kt
// test.Foo
package test

interface Foo {
    val foo: String
    val
}